Separated Maps functionality into an abstract class
- Separated MapActivity functionality (getting directions, drawing the
route on map etc) into an abstract class.
- MapTripActivity & MapsActivity inherit from MapActivity.
- Moved photo upload functionality into AddPhotoNoteActivity.